--- a/Samples/BetaSamples/LocalMediaSamples/PolicyRecordingBot/FrontEnd/CRFrontEnd.csproj
+++ b/Samples/BetaSamples/LocalMediaSamples/PolicyRecordingBot/FrontEnd/CRFrontEnd.csproj
@@ -58,14 +58,14 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Owin" Version="5.2.7" />
-    <PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0.3742" />
-    <PackageReference Include="Microsoft.Owin.Hosting" Version="4.2.0" />
-    <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.20.0.348-alpha" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0-beta.6916" />
+    <PackageReference Include="Microsoft.Owin.Hosting" Version="4.2.2" />
+    <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.24.0.36-alpha" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1.0" />
     <Reference Include="System.Data.Entity" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Common\Sample.Common\Sample.Common.csproj">
+    <ProjectReference Include="..\..\..\..\Common\Sample.Common.Beta\Sample.Common.Beta.csproj">
       <Project>{88b67fbe-6de8-4dc3-83cf-9f6b4ea10138}</Project>
       <Name>Sample.Common</Name>
     </ProjectReference>
