--- a/Samples/Common/Sample.Common.Beta/Sample.Common.Beta.csproj
+++ b/Samples/Common/Sample.Common.Beta/Sample.Common.Beta.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
     <RootNamespace>Sample.Common</RootNamespace>
     <AssemblyName>Sample.Common</AssemblyName>
     <Platforms>AnyCPU</Platforms>
@@ -10,16 +10,16 @@
   <Import Project="$(MSBuildThisFileDirectory)..\..\Graph.props" />
 
   <ItemGroup>
-    <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Graph.Communications.Calls" Version="1.2.0-beta.1" />
-    <PackageReference Include="Microsoft.Graph.Communications.Client" Version="1.2.0-beta.1" />
-    <PackageReference Include="Microsoft.Graph.Communications.Core" Version="1.2.0-beta.1" />
-    <PackageReference Include="Microsoft.Graph.Communications.Common" Version="1.2.0-beta.1" />
-    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.3" />
-    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="5.5.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
+    <PackageReference Include="Microsoft.Graph.Communications.Calls" Version="1.2.0-beta.6916" />
+    <PackageReference Include="Microsoft.Graph.Communications.Client" Version="1.2.0-beta.6916" />
+    <PackageReference Include="Microsoft.Graph.Communications.Core" Version="1.2.0-beta.6916" />
+    <PackageReference Include="Microsoft.Graph.Communications.Common" Version="1.2.0-beta.6916" />
+    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="6.26.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1.0" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
