--- a/Samples/PublicSamples/EchoBot/ADF/bicep/global/Global-ConfigVM.json
+++ b/Samples/PublicSamples/EchoBot/ADF/bicep/global/Global-ConfigVM.json
@@ -366,7 +366,7 @@
       "imageReference": {
         "publisher": "MicrosoftWindowsServer",
         "Offer": "WindowsServer",
-        "sku": "2022-datacenter-azure-edition-hotpatch",
+        "sku": "2022-Datacenter",
         "version": "latest"
       },
       "licenseType": "Windows_Server",
