--- a/Samples/PublicSamples/EchoBot/src/EchoBot.WorkerService/EchoBot.WorkerService.csproj
+++ b/Samples/PublicSamples/EchoBot/src/EchoBot.WorkerService/EchoBot.WorkerService.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.2" />
   </ItemGroup>
 
   <ItemGroup>
