--- a/.github/workflows/echobot-infra-BHACK.yml
+++ b/.github/workflows/echobot-infra-BHACK.yml
@@ -1,4 +1,4 @@
-name: .NET BOT D1 INFRA AHCK
+name: .NET BOT D1 INFRA BHACK
 
 # Controls when the action will run.
 on:
@@ -9,20 +9,20 @@ on:
       - 'v2'
     paths:
       - './Samples/PublicSamples/EchoBot/ADF/**'
-      - .github/workflows/echobot-infra-AHCK.yml
+      - .github/workflows/echobot-infra-BHACK.yml
 
   pull_request:
     branches:
       - 'v2'
     paths:
       - './Samples/PublicSamples/EchoBot/ADF/**'
-      - .github/workflows/echobot-infra-AHCK.yml
+      - .github/workflows/echobot-infra-BHACK.yml
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 env:
-  OrgName: AHCK
+  OrgName: BHACK
   Location: eastus2
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -43,7 +43,7 @@ jobs:
       - name: Login via Az module
         uses: azure/login@v1
         with:
-          creds: ${{secrets.AZURE_CREDENTIALS_AHCK_BOT}}
+          creds: ${{secrets.AZURE_CREDENTIALS_BHACK_BOT}}
           enable-AzPSSession: true
 
       - name: Deploy_All_Subscription
@@ -59,7 +59,7 @@ jobs:
             ./Samples/PublicSamples/EchoBot/ADF/main.ps1 @Params
             if ($e){throw $e}
         env:
-          VMSS_CREDENTIALS: ${{ secrets.VMSS_CREDENTIALS_AHCK_BOT }}
+          VMSS_CREDENTIALS: ${{ secrets.VMSS_CREDENTIALS_BHACK_BOT }}
 
 
 
