--- a/Samples/V1.0DeltaRosterSample/LocalMediaSamples/PolicyRecordingBot/FrontEnd/CRFrontEnd.csproj
+++ b/Samples/V1.0DeltaRosterSample/LocalMediaSamples/PolicyRecordingBot/FrontEnd/CRFrontEnd.csproj
@@ -23,6 +23,8 @@
     <PlatformTarget>x64</PlatformTarget>
     <LangVersion>latest</LangVersion>
     <ErrorReport>prompt</ErrorReport>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -31,12 +33,18 @@
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Bot\AudioBufferAsyncWriter.cs" />
     <Compile Include="Bot\Bot.cs" />
     <Compile Include="Bot\BotMediaStream.cs" />
     <Compile Include="Bot\CallHandler.cs" />
+    <Compile Include="Bot\Grouping\BaseReferenceCountingService.cs" />
+    <Compile Include="Bot\Grouping\ChildCallHandler.cs" />
     <Compile Include="Bot\ExceptionExtensions.cs" />
+    <Compile Include="Bot\GraphParticipantExtensions.cs" />
+    <Compile Include="Bot\MediaFileWriter.cs" />
     <Compile Include="Http\ExceptionLogger.cs" />
     <Compile Include="SampleConstants.cs" />
     <Compile Include="Http\Controllers\DemoController.cs" />
@@ -58,11 +66,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Owin" Version="5.2.7" />
-    <PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0.10115" TargetFramework="net472"/>
+    <PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0.10563" TargetFramework="net472" />
     <PackageReference Include="Microsoft.Owin.Hosting" Version="4.2.2" />
     <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.26.0.94-alpha" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2.0" />
-    <PackageReference Include="System.Text.Json" Version="7.0.1" />
     <Reference Include="System.Data.Entity" />
   </ItemGroup>
   <ItemGroup>
@@ -71,5 +78,6 @@
       <Name>Sample.Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
